请求了“直播”界面的网络数据。对“音乐”界面的歌单和视频请求了数据，实现最热和最新的切换。开始对”音乐“界面的推荐界面进行了第一次布局。。。

--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -21,6 +21,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
                 android:text="热门话题"/>
             <ImageView
                 android:id="@+id/iv_dynamic"
@@ -33,7 +34,9 @@
                 android:layout_height="20dp"
                 android:text="更多"
                 android:textSize="12sp"
+                android:layout_marginTop="2dp"
                 android:background="@null"
+                android:layout_marginRight="-20dp"
                 android:layout_toLeftOf="@id/iv_dynamic"/>
         </RelativeLayout>
         <android.support.v7.widget.RecyclerView
