--- a/app/src/main/res/layout/fragment_music_video_item.xml
+++ b/app/src/main/res/layout/fragment_music_video_item.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    android:padding="5dp">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="170dp"
+        android:layout_height="100dp"
+        android:scaleType="fitXY"
         android:background="@null"
         android:id="@+id/iv_video"/>
 
@@ -15,6 +16,7 @@
         android:layout_height="wrap_content"
         android:text="咆哮"
         android:textSize="10sp"
+        android:textColor="#000000"
         android:id="@+id/tv_title"/>
     <TextView
         android:layout_width="wrap_content"
