--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -43,7 +43,7 @@
                 android:layout_weight="1"/>
         </LinearLayout>
 
-        <ImageButton
+        <ProgressBar
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"/>
