--- a/app/src/main/res/layout/fragment_music_video.xml
+++ b/app/src/main/res/layout/fragment_music_video.xml
@@ -1,62 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:padding="5dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="全部"
-                android:textSize="12sp"
-                android:textColor="#000000"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="最新"
-            android:textSize="10sp"
-            android:layout_alignParentRight="true"
-            android:clickable="true"
-            android:id="@+id/tv_lastest"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="  |  "
-            android:textSize="10sp"
-            android:layout_toLeftOf="@id/tv_lastest"
-            android:id="@+id/tv_line"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="最热"
-            android:textSize="10sp"
-            android:layout_toLeftOf="@id/tv_line"
-            android:clickable="true"
-            android:id="@+id/tv_hostest"/>
-    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:id="@+id/rv_video">
+        android:id="@+id/rv_video"/>
 
-    </android.support.v7.widget.RecyclerView>
+    <com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rv_header_video">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <ImageView
+                    android:layout_width="3dp"
+                    android:layout_height="20dp"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/list_blue_press_9"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  全部  "
+                    android:textSize="15sp"
+                    android:textColor="#000000"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/bt_mv_pull_down_normal"/>
+            </LinearLayout>
 
-</LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="最热"
+                android:textSize="12sp"
+                android:layout_alignParentRight="true"
+                android:clickable="true"
+                android:id="@+id/tv_hostest"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="  |  "
+                android:textSize="12sp"
+                android:layout_toLeftOf="@id/tv_hostest"
+                android:id="@+id/tv_line"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="最新"
+                android:textSize="12sp"
+                android:layout_toLeftOf="@id/tv_line"
+                android:clickable="true"
+                android:id="@+id/tv_lastest"/>
+        </RelativeLayout>
+    </com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader>
+
+</RelativeLayout>
