--- a/app/src/main/res/layout/fragment_music_recommendation.xml
+++ b/app/src/main/res/layout/fragment_music_recommendation.xml
@@ -107,7 +107,9 @@
             <!--歌单推荐-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_recommendation"
                     android:layout_width="wrap_content"
@@ -119,15 +121,20 @@
                     android:layout_marginLeft="5dp"
                     android:text="歌单推荐"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentRight="true"
                     android:id="@+id/iv_recommendation"
+                    android:scaleType="fitXY"
+                    android:layout_marginRight="-3dp"
                     android:src="@mipmap/ic_songlist_detail_nor"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="更多"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="-5dp"
+                    android:textSize="10sp"
                     android:layout_toLeftOf="@id/iv_recommendation"/>
             </RelativeLayout>
 
@@ -140,7 +147,9 @@
             <!--新碟上架-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_last"
                     android:layout_width="wrap_content"
@@ -152,14 +161,19 @@
                     android:layout_marginLeft="5dp"
                     android:text="新碟上架"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentRight="true"
                     android:id="@+id/iv_last"
+                    android:scaleType="fitXY"
+                    android:layout_marginRight="-3dp"
                     android:src="@mipmap/ic_songlist_detail_nor"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="-5dp"
+                    android:textSize="10sp"
                     android:text="更多"
                     android:layout_toLeftOf="@id/iv_last"/>
 
@@ -173,7 +187,9 @@
             <!--热销专辑-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_hot"
                     android:layout_width="wrap_content"
@@ -187,20 +203,29 @@
             </RelativeLayout>
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_hot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
 
             <!--广告-->
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:id="@+id/iv_ad"
+                android:layout_width="333dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:scaleType="fitXY"/>
 
 
             <!--场景电台-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_scene"
                     android:layout_width="wrap_content"
@@ -212,14 +237,19 @@
                     android:layout_marginLeft="5dp"
                     android:text="场景电台"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
                     android:id="@+id/iv_scene"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentRight="true"
+                    android:scaleType="fitXY"
+                    android:layout_marginRight="-3dp"
                     android:src="@mipmap/ic_songlist_detail_nor"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="-5dp"
+                    android:textSize="10sp"
                     android:text="更多"
                     android:layout_toLeftOf="@id/iv_scene"/>
 
@@ -228,30 +258,109 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
+                android:orientation="horizontal"
+                android:padding="5dp">
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-                <ImageView
+                    android:layout_weight="1"
+                    android:padding="5dp">
+                    <ImageView
+                        android:id="@+id/iv_recommendation_scene1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@mipmap/img_recommend_lebo_orange"/>
+                    <TextView
+                        android:id="@+id/tv_recommendation_scene1_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="歌手"
+                        android:textSize="10sp"
+                        android:textColor="#fb7e15"
+                        android:gravity="center"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"/>
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-                <ImageView
+                    android:layout_weight="1"
+                    android:padding="5dp">
+                    <ImageView
+                        android:id="@+id/iv_recommendation_scene2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@mipmap/img_recommend_lebo_green"/>
+                    <TextView
+                        android:id="@+id/tv_recommendation_scene2_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="歌手"
+                        android:textSize="10sp"
+                        android:textColor="#7eb91a"
+                        android:gravity="center"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"/>
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-                <ImageView
+                    android:layout_weight="1"
+                    android:padding="5dp">
+                    <ImageView
+                        android:id="@+id/iv_recommendation_scene3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@mipmap/img_recommend_lebo_cyan"/>
+                    <TextView
+                        android:id="@+id/tv_recommendation_scene3_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="歌手"
+                        android:textSize="10sp"
+                        android:textColor="#46c4bd"
+                        android:gravity="center"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"/>
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:padding="5dp">
+                    <ImageView
+                        android:id="@+id/iv_recommendation_scene4"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@mipmap/img_recommend_lebo_blue"/>
+                    <TextView
+                        android:id="@+id/tv_recommendation_scene4_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="歌手"
+                        android:textSize="10sp"
+                        android:textColor="#2aabe3"
+                        android:gravity="center"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"/>
+                </RelativeLayout>
+
             </LinearLayout>
 
 
             <!--今日推荐歌曲-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_today"
                     android:layout_width="wrap_content"
@@ -263,24 +372,35 @@
                     android:layout_marginLeft="5dp"
                     android:text="今日推荐歌曲"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentRight="true"
+                    android:scaleType="fitXY"
+                    android:layout_marginRight="-3dp"
                     android:id="@+id/iv_today"
                     android:src="@mipmap/ic_songlist_detail_nor"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="-5dp"
+                    android:textSize="10sp"
                     android:text="更多"
                     android:layout_toLeftOf="@id/iv_today"/>
-
             </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_today"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
             <!--原创音乐-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_diy"
                     android:layout_width="wrap_content"
@@ -293,59 +413,18 @@
                     android:text="原创音乐"/>
             </RelativeLayout>
 
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_diy"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="白鹭为霜"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="T榜第八期"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="国风十年"/>
-                </LinearLayout>
-            </LinearLayout>
+                android:layout_height="wrap_content"/>
 
 
             <!--最热MV推荐-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_mv"
                     android:layout_width="wrap_content"
@@ -358,11 +437,18 @@
                     android:text="最热MV推荐"/>
             </RelativeLayout>
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_mv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
 
             <!--乐播节目-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_lebo"
                     android:layout_width="wrap_content"
@@ -374,24 +460,35 @@
                     android:layout_marginLeft="5dp"
                     android:text="乐播节目"/>
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentRight="true"
+                    android:scaleType="fitXY"
+                    android:layout_marginRight="-3dp"
                     android:id="@+id/iv_lebo"
                     android:src="@mipmap/ic_songlist_detail_nor"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="更多"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="-5dp"
+                    android:textSize="10sp"
                     android:layout_toLeftOf="@id/iv_lebo"/>
 
             </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_lebo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
             <!--专栏-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp">
                 <ImageView
                     android:id="@+id/iv_module_mod"
                     android:layout_width="wrap_content"
@@ -403,6 +500,12 @@
                     android:layout_marginLeft="5dp"
                     android:text="专栏"/>
             </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_mod"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
 
