--- a/app/src/main/res/layout/fragment_music_recommendation_recommendation.xml
+++ b/app/src/main/res/layout/fragment_music_recommendation_recommendation.xml
@@ -2,14 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/iv_recommendation_recommendation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp">
+        <ImageView
+            android:id="@+id/iv_recommendation_recommendation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"/>
+        <ImageView
+            android:id="@+id/iv_recommendation_recommendation_listen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_alignParentBottom="true"
+            android:src="@mipmap/ic_songlist_listen"/>
+        <TextView
+            android:id="@+id/tv_recommendation_recommendation_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/iv_recommendation_recommendation_listen"
+            android:textSize="10sp"
+            android:textColor="#ffffff"/>
+    </RelativeLayout>
+
     <TextView
-        android:id="@+id/tv_recommendation_recommendation"
+        android:id="@+id/tv_recommendation_recommendation_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="11sp"
+        android:textColor="#000000"/>
 </LinearLayout>
