--- a/app/src/main/res/layout/fragment_music_recommendation_today.xml
+++ b/app/src/main/res/layout/fragment_music_recommendation_today.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-    android:padding="5dp">
+              android:padding="5dp">
 
-    <ImageView
+    <lanou.baidumusic.tool.CircleImageView
         android:id="@+id/iv_recommendation_today"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        app:isCircle="true"/>
 
     <LinearLayout
-        android:layout_width="285dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp">
         <TextView
             android:id="@+id/tv_recommendation_today_title"
             android:layout_width="wrap_content"
@@ -33,6 +36,7 @@
     <ImageButton
         android:layout_width="25dp"
         android:layout_height="25dp"
+        android:layout_marginTop="3dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_list_more_normal"
         android:background="@null"/>
