想要抓音频的接口，wifi不行，抓不到，失败！！铺“动态”页， 只能铺个大概，具体太复杂了，简直没法做，很多字段都要考虑，布局也不同。

--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <ImageButton
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_dynamic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/trends_guide_img"
-        android:background="@null"
-        android:scaleType="fitXY"/>
-    <LinearLayout
+        android:layout_height="match_parent"
+        android:padding="10dp"/>
+
+    <com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader
+        android:id="@+id/rv_header_dynamic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="热门话题"/>
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <ImageView
-                android:id="@+id/iv_dynamic"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:src="@mipmap/ic_songlist_detail_nor"
-                android:layout_alignParentRight="true"/>
-            <Button
-                android:layout_width="40dp"
-                android:layout_height="20dp"
-                android:text="更多"
-                android:textSize="12sp"
-                android:layout_marginTop="2dp"
-                android:background="@null"
-                android:layout_marginRight="-20dp"
-                android:layout_toLeftOf="@id/iv_dynamic"/>
-        </RelativeLayout>
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/trends_guide_img"
+                android:scaleType="fitXY"/>
 
-        </android.support.v7.widget.RecyclerView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="热门话题"/>
+                <ImageView
+                    android:id="@+id/iv_dynamic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:src="@mipmap/ic_songlist_detail_nor"
+                    android:layout_alignParentRight="true"/>
+                <Button
+                    android:layout_width="40dp"
+                    android:layout_height="20dp"
+                    android:text="更多"
+                    android:textSize="12sp"
+                    android:layout_marginTop="2dp"
+                    android:background="@null"
+                    android:layout_marginRight="-20dp"
+                    android:layout_toLeftOf="@id/iv_dynamic"/>
+            </RelativeLayout>
+        </LinearLayout>
 
-    </LinearLayout>
+    </com.bartoszlipinski.recyclerviewheader.RecyclerViewHeader>
 
-</LinearLayout>
+</RelativeLayout>
